# rs-graph-llm

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  QUEUE_BASED_EXECUTION_DESIGN.md  README.md  README_postgres_session_storage.md
.claude/: CRATE_STRUCTURE.md  DISTRIBUTED_CHECKPOINTING.md  LANGGRAPH_PARITY.md
examples/: Cargo.toml  classifier_agent.rs  complex_example.rs  fanout_basic.rs  recommendation_flow.rs  researcher_agent.rs  session_validation_demo.sh  simple_example.rs  terminal_client.rs  test_api.sh  test_status_messages.sh  yaml_agent.rs
graph-flow/: Cargo.toml  README.md
graph-flow-server/: Cargo.toml
graph-flow-server/src/: lib.rs
graph-flow/src/: channels.rs  compat.rs  context.rs  error.rs  fanout.rs  graph.rs  lance_storage.rs  lib.rs  mcp_tool.rs  react_agent.rs  retry.rs  run_config.rs  runner.rs  storage.rs  storage_postgres.rs  streaming.rs  subgraph.rs  task.rs  task_registry.rs  thinking.rs  tool_result.rs  typed_context.rs
graph-flow/src/agents/: agent_card.rs  langgraph_import.rs  mod.rs
graph-service/: Cargo.toml  MULTI_USER_ANALYSIS.md
graph-service/examples/: test_multi_user.sh
graph-service/src/: chat_bridge.rs  main.rs  tasks.rs
graph-service/src/tasks/: README.md  answer_user_requests.rs  apartment_insurance_details.rs  car_insurance_details.rs  collect_user_details.rs  fetch_account_details.rs  initial_claim_query.rs  insurance_type_classifier.rs  mod.rs  smart_claim_validator.rs  types.rs  utils.rs
insurance-claims-service/: Cargo.toml
insurance-claims-service/src/: main.rs
insurance-claims-service/src/tasks/: apartment_insurance_details.rs  car_insurance_details.rs  final_summary.rs  insurance_type_classifier.rs  smart_claim_validator.rs  utils.rs
medical-document-service/src/tasks/: utils.rs
recommendation-service/: Cargo.toml
recommendation-service/src/: main.rs
recommendation-service/src/tasks/: answer_generation.rs  mod.rs  query_refinement.rs  types.rs  utils.rs  validation.rs  vector_search.rs
