[workspace]
members = [
    "graph-flow",
    "graph-service",
    # "graph-cli",   # removed because the directory no longer exists
    "examples"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "6.1"
rig-core = "0.12.0"
axum = "0.8.4"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace"] }
