[workspace]
members = [
    "graph-flow",
    "graph-service",
    "examples"
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.40", features = ["full"] }
async-trait = "0.1"
anyhow = "1.0"
thiserror = "2.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dashmap = "6.1"
rig-core = "0.13.0"
axum = "0.8.4"
tower = "0.5"
tower-http = { version = "0.6.6", features = ["trace"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "json", "macros", "uuid"] }
