[[bin]]
name = "simple_example"
path = "simple_example.rs"

[[bin]]
name = "terminal_client"
path = "terminal_client.rs"

[package]
name = "examples"
version = "0.1.0"
edition = "2021"

[dependencies]
graph-flow = { path = "../graph-flow" }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0" 