[[bin]]
name = "simple_example"
path = "simple_example.rs"

[[bin]]
name = "terminal_client"
path = "terminal_client.rs"

[[bin]]
name = "complex_example"
path = "complex_example.rs"

[[bin]]
name = "recommendation_flow"
path = "recommendation_flow.rs"

[package]
name = "examples"
version = "0.1.0"
edition = "2024"

[dependencies]
graph-flow = { path = "../graph-flow" }
tokio = { workspace = true }
async-trait = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
clap = { version = "4.5", features = ["derive"] }
serde_json = "1.0"
rig-core = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
rand = "0.9.1"
sqlx = { workspace = true }
fastembed = "4" 
uuid = "1.17.0"