[package]
name = "graph-flow-server"
version = "0.1.0"
edition = "2024"
description = "HTTP API server for graph-flow, compatible with LangGraph API"

[dependencies]
graph-flow = { path = "../graph-flow" }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
async-trait = { workspace = true }
