[package]
name = "graph-flow"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
dashmap = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
sqlx = { workspace = true }