[package]
name = "graph-service"
version = "0.1.0"
edition = "2024"

[dependencies]
graph-flow = { path = "../graph-flow" }
async-trait = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
rig-core = { workspace = true }
tokio = { workspace = true }
regex = "1.0" 